z-index fix for shop button

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -131,6 +131,7 @@ h1,h2,h3,h4,h5,h6 {
     padding: 20px 5vw 20px 25px;
     background: #fff;
     font-size: 0.7em;
+    z-index: 999;
 }
 
 .project h1 {
